# suvarix

./: .gitignore  CLAUDE.md  EULA.md  GETTING_STARTED.md  LICENSE  Makefile  PRIVACY.md  README.md  USER_GUIDE.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: android-build.yml  build.yml  release-build.yml
docs/: android-emulator-testing.md  index.md
docs/superpowers/specs/: 2026-06-27-broker-csv-import-design.md
scripts/: status.ps1
src/: App.vue  components.d.ts  constants.ts  eulaText.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/tauri-plugin-receipt-ocr/: Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-receipt-ocr/android/: build.gradle.kts  proguard-rules.pro
src-tauri/plugins/tauri-plugin-receipt-ocr/android/src/main/: AndroidManifest.xml
src-tauri/plugins/tauri-plugin-receipt-ocr/android/src/main/java/com/plugin/receiptocr/: ReceiptOcrFileProvider.kt  ReceiptOcrPlugin.kt
src-tauri/plugins/tauri-plugin-receipt-ocr/android/src/main/res/xml/: receipt_ocr_file_paths.xml
src-tauri/plugins/tauri-plugin-receipt-ocr/permissions/: default.toml
src-tauri/plugins/tauri-plugin-receipt-ocr/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-receipt-ocr/permissions/autogenerated/commands/: scan_receipt.toml
src-tauri/plugins/tauri-plugin-receipt-ocr/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-receipt-ocr/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src-tauri/src/: constants.rs  error.rs  lib.rs  logging.rs  main.rs  test_utils.rs
src-tauri/src/analytics/: commands.rs
src-tauri/src/auth/: commands.rs  master_password.rs  mod.rs
src-tauri/src/backup/: commands.rs  scheduler.rs
src-tauri/src/categories/: commands.rs
src-tauri/src/data_sources/: angel_one.rs  broker.rs  commands.rs  csv_importer.rs  mod.rs  pdf_parser.rs  upstox.rs  zerodha.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/dev_tools/: mod.rs
src-tauri/src/financial_health/: commands.rs
src-tauri/src/gamification/: challenges.rs  commands.rs  mod.rs
src-tauri/src/goals/: commands.rs
src-tauri/src/income_expenses/: commands.rs
src-tauri/src/insights/: commands.rs  mod.rs
src-tauri/src/liabilities/: commands.rs  mod.rs  payoff.rs
src-tauri/src/models/: account.rs  bond.rs  budget.rs  common.rs  crypto.rs  enums.rs  equity.rs  fd.rs  gold.rs  insurance.rs  loan.rs  mf.rs  mod.rs  ppf_epf.rs  real_estate.rs  settings.rs  transaction.rs
src-tauri/src/notifications/: scheduler.rs
src-tauri/src/portfolio/: calculator.rs  commands.rs  mod.rs
src-tauri/src/prices/: commands.rs  equity_price.rs  mf_nav.rs  mod.rs
src-tauri/src/reminders/: commands.rs
src-tauri/src/reports/: capital_gains.rs  commands.rs  mod.rs  net_worth_history.rs
src-tauri/src/settings/: commands.rs
src-tauri/src/transactions/: bank_import.rs  commands.rs  csv_import.rs  mod.rs
src-tauri/tests/: auth_flow.rs  portfolio_crud.rs  settings_backup_restore.rs
src-tauri/tests/common/: mod.rs
src/components/: CategoryManagerDialog.vue  ChallengesCard.vue  DebtPayoffPlanner.vue  EmergencyFundCard.vue  FinancialHealthCard.vue  GamificationWidget.vue  InsightsFeed.vue  Logo.vue
src/components/portfolio/: BondsPanel.vue  CryptoPanel.vue  EquityPanel.vue  FdPanel.vue  GoldPanel.vue  InsurancePanel.vue  MfPanel.vue  PpfEpfPanel.vue  RealEstatePanel.vue
src/composables/: useAnalytics.ts  useAppUpdater.ts  useChartColors.ts  useCurrencyFormat.ts  useDateConvert.ts  useGamification.ts  useGoalCheck.ts  useHealthCheck.ts  useHoldingCrud.ts  useMaturityCheck.ts  useMilestoneCheck.ts  useNotifications.ts  useReceiptScan.ts
src/composables/__tests__/: sanity.test.ts  useCurrencyFormat.test.ts  useDateConvert.test.ts
src/layouts/: AppLayout.vue
src/router/: index.ts
src/stores/: angel_one.ts  auth.ts  broker.ts  budget.ts  categories.ts  challenges.ts  financialHealth.ts  gamification.ts  goals.ts  insights.ts  liabilities.ts  portfolio.ts  prices.ts  reminders.ts  reports.ts  transactions.ts  ui.ts  upstox.ts  zerodha.ts
src/stores/__tests__/: goals.test.ts  liabilities.test.ts  portfolio.test.ts  transactions.test.ts
src/utils/: bankStatementParser.ts  casMfParser.ts  errorMessage.ts  receiptParser.ts  txnCategorize.ts
src/utils/__tests__/: bankStatementParser.test.ts  receiptParser.test.ts  (+1 more)
src/views/: CalendarView.vue  DashboardView.vue  DataSourcesView.vue  EulaGateView.vue  GoalsView.vue  IncomeExpensesView.vue  LiabilitiesView.vue  OnboardingView.vue  PortfolioView.vue  RemindersView.vue  ReportsView.vue  SettingsView.vue  SetupView.vue  TransactionsView.vue  UnlockView.vue
