[package]
name = "suvarix"
version = "0.6.7"
description = "Suvarix — Personal Finance Tracker"
authors = ["Rajkumar"]
license = "LicenseRef-Proprietary"
edition = "2021"

[lib]
name = "suvarix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-opener       = "2"
tauri-plugin-dialog       = "2"
tauri-plugin-fs           = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater  = "2"
tauri-plugin-process  = "2"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

rusqlite   = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl", "backup"] }
keyring    = "3"
r2d2        = "0.8"
r2d2_sqlite = "0.24"

tokio    = { version = "1", features = ["full"] }
reqwest  = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

csv         = "1.3"
regex       = "1.10"
chrono      = { version = "0.4", features = ["serde"] }
thiserror   = "1.0"
anyhow      = "1.0"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64      = "0.22"
sha2        = "0.10"
hmac        = "0.12"
pbkdf2      = { version = "0.12", features = ["simple"] }
rand        = "0.8"
zeroize     = "1.7"
hex         = "0.4"
aes-gcm     = "0.10"

[dev-dependencies]
tempfile = "3"

[features]
default = []
gamification = []

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
panic         = "abort"
strip         = true
