[package]
name = "suvarix"
version = "0.6.33"
description = "Suvarix — Personal Finance Tracker"
authors = ["Rajkumar"]
license = "LicenseRef-Proprietary"
edition = "2021"

[lib]
name = "suvarix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener       = "2"
tauri-plugin-dialog       = "2"
tauri-plugin-fs           = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater  = "2"
tauri-plugin-process  = "2"
tauri-plugin-autostart    = "2"
# Local plugin: Android receipt scan (camera/gallery + on-device ML Kit OCR).
# Registered on all platforms — desktop stub answers is_supported=false so the
# UI can gate the scan button without a separate platform-scoped capability.
tauri-plugin-receipt-ocr  = { path = "plugins/tauri-plugin-receipt-ocr" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

rusqlite   = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl", "backup"] }
keyring    = "3"
r2d2        = "0.8"
r2d2_sqlite = "0.24"

tokio    = { version = "1", features = ["full"] }
reqwest  = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

csv         = "1.3"
regex       = "1.10"
chrono      = { version = "0.4", features = ["serde"] }
thiserror   = "1.0"
anyhow      = "1.0"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64      = "0.22"
sha2        = "0.10"
hmac        = "0.12"
pbkdf2      = { version = "0.12", features = ["simple"] }
rand        = "0.8"
zeroize     = "1.7"
hex         = "0.4"
aes-gcm     = "0.10"

# Single-instance guard is a desktop-only concern (mobile OSes already enforce
# one process per app) — keep the dep off Android/iOS builds.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-android-fs = "28.4.0"
# Bridges `tracing` events to Android logcat (NDK __android_log_write) — desktop
# gets stdout via plain tracing_subscriber::fmt, see src/logging.rs.
paranoid-android = "0.2"

[dev-dependencies]
tempfile = "3"
proptest = "1"

[features]
default = []
gamification = []
# Property-based (proptest) merge tests — slower (many generated cases against
# real temp-file SQLCipher DBs) and off by default; run via `make test-property`.
property-tests = []

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
panic         = "abort"
strip         = true
