[package]
name = "tauri-plugin-receipt-ocr"
version = "0.1.0"
description = "Receipt scanning (camera/gallery capture + on-device ML Kit OCR) for Suvarix on Android"
authors = ["Rajkumar"]
license = "LicenseRef-Proprietary"
edition = "2021"
links = "tauri-plugin-receipt-ocr"

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
